crates/pg_syntax/tests/snapshots/postgres_regress/inet@39.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT * FROM inet_tbl WHERE i<<'192.168.1.0/24'::cidr;"
---
SelectStmt@0..55
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..8
    ColumnRef@7..8
      AStar@7..8
        Ascii42@7..8 "*"
  Whitespace@8..9 " "
  From@9..13 "FROM"
  Whitespace@13..14 " "
  RangeVar@14..22
    Ident@14..22 "inet_tbl"
  Whitespace@22..23 " "
  Where@23..28 "WHERE"
  Whitespace@28..29 " "
  AExpr@29..54
    ColumnRef@29..30
      Ident@29..30 "i"
    Op@30..32 "<<"
    TypeCast@32..54
      AConst@32..48
        Sconst@32..48 "'192.168.1.0/24'"
      Typecast@48..50 "::"
      TypeName@50..54
        Ident@50..54 "cidr"
  Ascii59@54..55 ";"

