crates/pg_syntax/tests/snapshots/postgres_regress/inet@4.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "INSERT INTO INET_TBL (c, i) VALUES ('192.168.1.0/26', '192.168.1.226');"
---
InsertStmt@0..71
  Insert@0..6 "INSERT"
  Whitespace@6..7 " "
  Into@7..11 "INTO"
  Whitespace@11..12 " "
  RangeVar@12..20
    Ident@12..20 "INET_TBL"
  Whitespace@20..21 " "
  Ascii40@21..22 "("
  ResTarget@22..23
    Ident@22..23 "c"
  Ascii44@23..24 ","
  Whitespace@24..25 " "
  ResTarget@25..26
    Ident@25..26 "i"
  Ascii41@26..27 ")"
  Whitespace@27..28 " "
  SelectStmt@28..69
    Values@28..34 "VALUES"
    Whitespace@34..35 " "
    Ascii40@35..36 "("
    List@36..69
      AConst@36..52
        Sconst@36..52 "'192.168.1.0/26'"
      Ascii44@52..53 ","
      Whitespace@53..54 " "
      AConst@54..69
        Sconst@54..69 "'192.168.1.226'"
  Ascii41@69..70 ")"
  Ascii59@70..71 ";"

