crates/pg_syntax/tests/snapshots/postgres_regress/inet@43.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT * FROM inet_tbl WHERE '192.168.1.0/24'::cidr >>= i;"
---
SelectStmt@0..58
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..8
    ColumnRef@7..8
      AStar@7..8
        Ascii42@7..8 "*"
  Whitespace@8..9 " "
  From@9..13 "FROM"
  Whitespace@13..14 " "
  RangeVar@14..22
    Ident@14..22 "inet_tbl"
  Whitespace@22..23 " "
  Where@23..28 "WHERE"
  Whitespace@28..29 " "
  AExpr@29..57
    TypeCast@29..51
      AConst@29..45
        Sconst@29..45 "'192.168.1.0/24'"
      Typecast@45..47 "::"
      TypeName@47..51
        Ident@47..51 "cidr"
    Whitespace@51..52 " "
    Op@52..55 ">>="
    Whitespace@55..56 " "
    ColumnRef@56..57
      Ident@56..57 "i"
  Ascii59@57..58 ";"

