crates/pg_syntax/tests/snapshots/postgres_regress/inet@49.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: SET enable_seqscan TO off;
---
VariableSetStmt@0..26
  Set@0..3 "SET"
  Whitespace@3..4 " "
  Ident@4..18 "enable_seqscan"
  Whitespace@18..19 " "
  To@19..21 "TO"
  Whitespace@21..22 " "
  AConst@22..25
    Off@22..25 "off"
  Ascii59@25..26 ";"

