crates/pg_syntax/tests/snapshots/postgres_regress/inet@6.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "INSERT INTO INET_TBL (c, i) VALUES ('192.168.1', '192.168.1.0/25');"
---
InsertStmt@0..67
  Insert@0..6 "INSERT"
  Whitespace@6..7 " "
  Into@7..11 "INTO"
  Whitespace@11..12 " "
  RangeVar@12..20
    Ident@12..20 "INET_TBL"
  Whitespace@20..21 " "
  Ascii40@21..22 "("
  ResTarget@22..23
    Ident@22..23 "c"
  Ascii44@23..24 ","
  Whitespace@24..25 " "
  ResTarget@25..26
    Ident@25..26 "i"
  Ascii41@26..27 ")"
  Whitespace@27..28 " "
  SelectStmt@28..65
    Values@28..34 "VALUES"
    Whitespace@34..35 " "
    Ascii40@35..36 "("
    List@36..65
      AConst@36..47
        Sconst@36..47 "'192.168.1'"
      Ascii44@47..48 ","
      Whitespace@48..49 " "
      AConst@49..65
        Sconst@49..65 "'192.168.1.0/25'"
  Ascii41@65..66 ")"
  Ascii59@66..67 ";"

